[package]
name = "raven-railgun-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Crash-consistent persistence for the Raven Railgun PIR engine: app binding over raven-storage (snapshots + crc32-framed WAL + atomic-rename manifest)."

[lints]
workspace = true

[dependencies]
raven-storage = { path = "../../../crates/storage" }
serde = { workspace = true }
bincode = { workspace = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"
sha2 = { workspace = true }
bitcode = { version = "0.6", features = ["serde"] }

[features]
default = ["zstd-compression"]
zstd-compression = ["dep:zstd", "raven-storage/zstd-compression"]
chaos-tests = []

[[bin]]
name = "wal_chaos_child"
path = "src/bin/wal_chaos_child.rs"
required-features = ["chaos-tests"]

[[bin]]
name = "snapshot_chaos_child"
path = "src/bin/snapshot_chaos_child.rs"
required-features = ["chaos-tests"]
